--- a/project01/src/main/java/app/FormPackage/AddUserForm.form
+++ b/project01/src/main/java/app/FormPackage/AddUserForm.form
@@ -68,12 +68,19 @@
               </Group>
               <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+              <Component id="labelBack" min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="50" max="32767" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
+              <Component id="labelBack" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="labelFirstName" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="tfFirstName" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -187,6 +194,14 @@
     <Component class="javax.swing.JPasswordField" name="pfPassword">
     </Component>
     <Component class="javax.swing.JPasswordField" name="pfRePassword">
+    </Component>
+    <Component class="javax.swing.JLabel" name="labelBack">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Back"/>
+      </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="labelBackMouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
